css/projects.css
:root {
    --primary: hsl(29, 87%, 56%);
    --secondary: hsl(29, 100%, 11%);
    --accent: hsl(29, 100%, 25%);
    --grey-med: hsl(222, 10%, 74%);
    --grey-lt: hsl(222, 10%, 84%);
    --font-base: 'Merriweather', serif;
    --font-base-sans: 'Merriweather Sans', sans-serif;
    --font-display: 'Bebas Neue', serif;
    --shadow-low: 0px 20px 0px rgba(0, 0, 0, 0.25);
    --shadow-high: 0px 60px 0px rgba(0, 0, 0, 0.25);

    --border-round-lg: 32px;
    --border-round-sm: 0;
}

html,
body {
    color: var(--secondary);
    font-family: var(--font-base-sans);
}

html {
    scroll-padding-top: 105px;
    margin-top: 105px;
}

.modal-header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background: #ffffff;
    z-index: 1;
    box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.05), 0px 4px 8px rgba(0, 0, 0, 0.05);
}

.header-content {
    max-width: 1200px;
}

.footer-content {
    max-width: 1200px;
}

.container-fluid {
    max-width: 1200px;
}

h1 {
    font-family: var(--font-display);
    font-size: 48px;
}

.btn-close {
    color: var(--primary);
    opacity: 100%;
}

h2 {
    font-size: 16px;
    color: var(--accent);
    text-transform: uppercase;
}

.project-title {
    font-size: 36px;
    font-family: var(--font-display);
}

ul {
    list-style: none;
}

ul>li::before {
    content: "• ";
    color: var(--accent);
    display: inline-block;
    width: 1em;
    margin-left: -1.2em;
}

ol {
    list-style: none;
    counter-reset: custom-counter;
}

ol>li {
    counter-increment: custom-counter;
}

ol>li::before {
    content: counter(custom-counter)". ";
    color: var(--accent);
    display: inline-block;
    width: 1em;
    margin-left: -1.2em;
}

img {
    image-rendering: -webkit-optimize-contrast;
    image-rendering: crisp-edges;
}

.btn-primary {
    background-color: #ffffff;
    color: var(--secondary);
    border: 2px solid var(--accent);
    border-radius: 36px;
    padding: 8px 32px;
    text-decoration: none;
}

.btn-primary:hover {
    background-color: var(--primary);
    color: var(--secondary);
    border: 2px solid var(--primary);
}

.btn-primary:focus {
    background-color: var(--primary);
    color: var(--secondary);
    border: 2px solid var(--primary);
    border-color: var(--primary);
    box-shadow: 0 0 0 0.25rem var(--secondary);
}

.btn-secondary {
    background-color: var(--secondary);
    border: 2px solid var(--secondary);
    border-radius: 36px;
    padding: 8px 32px;
    text-decoration: none;
}

.btn-secondary:hover {
    background-color: var(--primary);
    color: var(--secondary);
    border: 2px solid var(--primary);
}

.btn-secondary:focus {
    background-color: var(--primary);
    color: var(--secondary);
    border: 2px solid var(--primary);
    border-color: var(--primary);
    box-shadow: 0 0 0 0.25rem var(--primary);
}

a {
    color: var(--accent);
    text-decoration: none;
    border-bottom: 2px solid var(--accent);
}

a:hover {
    color: var(--primary);
}

.image-shadow {
    box-shadow: 0px 16px 32px rgba(0, 0, 0, 0.25), 0px 4px 8px rgba(0, 0, 0, 0.2);
}

.white-text {
    color: #ffffff;
}

.context-box {
    background: #000000;
    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.25), 0px 16px 32px rgba(0, 0, 0, 0.25), 0px 4px 8px rgba(0, 0, 0, 0.2);
    border-radius: 22px;
    padding: 16px 16px 8px;
    margin-bottom: 16px;
}

/* checkouttemplates styles */

.payments-image-container {
    background-color: #000000;
    background: url(/images/project-images/payments-background.svg) repeat;
    background-position: 0 0;
    background-size: auto;
    border-radius: var(--border-round-lg);
    box-shadow: 0 4px 100px 0 rgba(0, 0, 0, 0.15) inset;
}

.carousel {
    --duration: 10s;   /* total cycle time */
    --slides: 4;       /* number of images */
}

.carousel img {
    position: absolute;
    opacity: 0;
    animation: show var(--duration) infinite;
}

.carousel img:nth-child(1) { animation-delay: calc(0 * var(--duration) / var(--slides)); }
.carousel img:nth-child(2) { animation-delay: calc(1 * var(--duration) / var(--slides)); }
.carousel img:nth-child(3) { animation-delay: calc(2 * var(--duration) / var(--slides)); }
.carousel img:nth-child(4) { animation-delay: calc(3 * var(--duration) / var(--slides)); }

@keyframes show {
    0%   { opacity: 1; }
    24.999% { opacity: 1; }
    25%  { opacity: 0; }
    100% { opacity: 0; }
}

/* shoppingmobileapp styles */

.shoppingmobileapp-image-container {
    background-color: #F7F2E3;
    background: url(/images/project-images/shopping-background.svg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    border-radius: var(--border-round-lg);
}

/* huey styles */

.huey-image-container {
    background-color: #000000;
    background: url(/images/project-images/huey-background.svg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    border-radius: var(--border-round-lg);
}

/* auto loan tools styles */

.autoloantools-image-container-1 {
    background-color: #000000;
    background: url(/images/project-images/autoloantools-background1.svg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    border-radius: var(--border-round-lg);
}

.autoloantools-image-container-2 {
    background-color: #000000;
    background: url(/images/project-images/autoloantools-background2.svg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    border-radius: var(--border-round-lg);
}

/* connecting flight styles */

.connectingflight-image-container-1 {
    background-color: #000000;
    background: url(/images/project-images/connectingflight-background1.svg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    border-radius: var(--border-round-lg);
}

.connectingflight-image-container-2 {
    background-color: #000000;
    background: url(/images/project-images/connectingflight-background2.svg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    border-radius: var(--border-round-lg);
}

/* skylanders styles */

.skylanders-image-container {
    background-color: #000000;
    background: url(/images/project-images/skylanders3Dadventure-background.svg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    border-radius: var(--border-round-lg);
}

/* generator styles */

.text-off-white1 {
    color: #F7F2E3;
}

.text-off-white2 {
    color: #EBDEBA;
}

.round-corners {
    border-radius: 24px;
    overflow: hidden;
}

.generator-image-container1 {
    background-color: #000000;
    background: url(/images/project-images/generator-background1.svg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    border-radius: var(--border-round-lg);
}

.generator-image-container2 {
    background-color: #000000;
    background: url(/images/project-images/generator-background2.svg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    border-radius: var(--border-round-lg);
}

.generator-image-container3 {
    background-color: #000000;
    background: url(/images/project-images/generator-background3.svg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    border-radius: var(--border-round-lg);
}

.generator-image-container4 {
    background-color: #f2f2f2;
    background-color: #ffffff;
    border-radius: var(--border-round-lg);
    overflow: hidden;
}

.no-gutters {
    margin-right: 0;
    margin-left: 0;
    padding-right: 0;
    padding-left: 0;
}


/* monster project styles */

.monster-image-container {
    background-color: #f2f1f1;
    overflow: hidden;
}

.monstats {
    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: repeat(5, auto);
    grid-column-gap: 0;
    grid-row-gap: 1px;
    background-color: var(--grey-lt);
    padding: 0;
}

.leftstat {
    color: var(--accent);
    background-color: #ffffff;
    padding: 8px 0 8px;
}

.rightstat {
    background-color: #ffffff;
    padding: 8px 0 8px;
}

/* visual design project styles */

.visual-design-image-container {
    background-color: #f2f1f1;
    border-radius: var(--border-round-lg);
    overflow: hidden;
}

/* Media Queries */

/* tablet styles */
@media (max-width: 768px) {
    .modal-title {
        font-size: 32px;
    }

    .shoppingmobileapp-image-container {
        border-radius: var(--border-round-sm);
    }

    .shoppingmobileapp-image-container,
    .huey-image-container,
    .autoloantools-image-container-1,
    .autoloantools-image-container-2,
    .connectingflight-image-container-1,
    .connectingflight-image-container-2,
    .skylanders-image-container,
    .generator-image-container1,
    .generator-image-container2,
    .generator-image-container3,
    .generator-image-container4,
    .visual-design-image-container {
        border-radius: var(--border-round-sm);
    }

    .round-corners {
        border-radius: 12px;
    }
}

/* phone styles */
@media (max-width: 576px) {

    .project-title {
        font-size: 32px;
    }

}

